--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Dinosaur Designs</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
 
