--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
+    <header role="banner">
+      <h1> <img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"> </h1>
+    </header>
 
+<main role="main">
+  <h2>Hadrosaur</h2>
+  <figure>
+    <img src="images/hadrosaur.jpg" alt="">
+    <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+  </figure>
+</main>
   </body>
 </html>
