--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <main role="main">
   <h2 id="hadrosaur">Hadrosaur</h2>
   <figure>
-    <img src="images/hadrosaur.jpg" alt="Dinos 'R' Us>
-    <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+    <img src="images/hadrosaur.jpg" alt="Dinos 'R' Us">
+    <figcaption class="intro"> Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
   </figure>
 
   <h2 id="iguanodon">Iguanodon</h2>
