--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1> <img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"> </h1>
+    <h1> <img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"> </h1>
     <nav>
       <ol>
         <li><a href="#hadrosaur">Hadrosaur</a></li>
@@ -22,19 +22,19 @@
   <main role="main">
     <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
-      <img src="images/hadrosaur.jpg" alt="Dinos 'R' Us">
+      <img src="images/hadrosaur.jpg" alt="Dinos ’R’ Us">
       <figcaption class="intro"> Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
 
     <h2 id="iguanodon">Iguanodon</h2>
     <figure>
-      <img src="images/iguanodon.jpg" alt="Dinos 'R' Us">
+      <img src="images/iguanodon.jpg" alt="Dinos ’R’ Us">
       <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
 
     <h2 id="stegosaurus">Stegosaurus</h2>
     <figure>
-      <img src="images/stegosaurus.jpg" alt="Dinos 'R' Us">
+      <img src="images/stegosaurus.jpg" alt="Dinos ’R’ Us">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
   </main>
